# snipe

./: .gitignore  .pylintrc  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
snipe/: bot.py  config.py  emoji.py  task.py
snipe/cogs/: cancel.py  cmd.py  owner.py  schedule.py  show.py  slash_schedule.py  voice.py
tests/: test_snipe.py
